--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "validator": "^13.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts build",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll --env=jsdom-fourteen",
     "eject": "react-scripts eject"
